--- a/Galaxy.html
+++ b/Galaxy.html
@@ -394,8 +394,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-              <img class="image" src="img/works/Galaxy/Laptop-with-log-in.svg" alt="Log In">
+            <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+              <img class="image" src="img/works/Galaxy/Screens/V-2/LOGIN-SCREEN.png" alt="Log In">
             </div>
           </div>
         </section>
@@ -409,7 +409,7 @@
                 <p class="bottom_60 white-text">
                   After loging in, agent J will locate his office profile. Once in the the profile, on
                   the actions panel, he can click on
-                  "Create Resource Request" to
+                  "New Request" to
                   open a new request form. Also on the "Resource Request" section of the profile he
                   can find all the requests for that office.
                 </p>
@@ -421,14 +421,13 @@
                 <div class="owl-carousel owl-theme testimonials bottom_60" data-autoplay="false" data-nav="true"
                   data-dots="false" data-items-desktop="1" data-items-desktop-small="1" data-items-tablet="1"
                   data-items-tablet-small="1">
-
-                  <div class="item">
-                    <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
-                      alt="Light Theme" />
-                  </div>
                   <div class="item">
                     <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
                       alt="Dark Theme" />
+                  </div>
+                  <div class="item">
+                    <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
+                      alt="Light Theme" />
                   </div>
 
                 </div>
@@ -499,13 +498,13 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-12 bottom_60">
+            <div class="col-lg-12 bottom_120">
               <h2 class="text text-center white-text title">Intuitive &amp; Simple UI</h2>
             </div>
           </div>
 
-          <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
-            <img src="img/works/Galaxy/GAL-AXY-LOGO.svg" alt="Logo">
+          <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4 image">
+            <img src="img/works/Galaxy/GALAXY-LOGO.svg" alt="Logo">
           </div>
         </section>
         <section data-midnight="dark" class="project-detail galaxy-bg-to-black lightbox-gallery">
