--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hello, my name is Peter. I am Interaction designer that helps companies make
-            products that are easy to use. To learn more about me, the person, check out my <a
-              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
+          <p class="padtop_60 grey-text">Hello, my name is Peter. I am an artist that helps companies make their
+            products easy-to-use and while I am at it I also help them look good, real good. To learn more about me, the
+            person, check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer"
+              target="_blank">blog</a>
             </li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
