--- a/es.html
+++ b/es.html
@@ -57,9 +57,6 @@
           <span></span>
         </div>
       </div>
-      <div class="float-right">
-        <a class="text-white px-4" href="index.html">English</a>
-      </div>
     </header>
 
     <!-- Navigation -->
@@ -82,6 +79,9 @@
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
+            <li class="scroll">
+              <a href="index.html">Website in English</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -103,40 +103,8 @@
 ================================================== -->
     <div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">
       <div class="row lightbox-gallery">
-        <div class="col-lg-8 bottom_60 wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-          <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
-              src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
-              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-              allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-          <script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-        <div class="col-lg-4">
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Galaxy.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
-            </a>
-          </div>
-
-          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Library-of-Congress.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
-                alt="Library of Congress">
-            </a>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="row lightbox-gallery">
-
 
         <div class="col-lg-4">
-          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-USA-Today.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
-                alt="USA Today Brand Refresh">
-            </a>
-          </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="es-Gallo-Guapo.html">
@@ -145,21 +113,12 @@
             </a>
           </div>
 
-
-
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Biodiversity-Festival.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
-                alt="Bat Flying Animation">
+          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="es-USA-Today.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
+                alt="USA Today Brand Refresh">
             </a>
           </div>
-
-
-
-
-        </div>
-
-        <div class="col-lg-4">
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="es-Creating-Change.html">
@@ -168,8 +127,10 @@
             </a>
           </div>
 
+
+
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-UI-UX-Illustrations.html">
+            <a href="UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
@@ -181,6 +142,68 @@
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
+          <!--  ================== HIDE 
+      <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+        <a href="Racing-Extinction.html">
+          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+            alt="">
+        </a>
+      </div>
+===================== -->
+
+
+          <!--  ================== HIDE 
+      <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+        <a href="Biodiversity-Festival.html">
+          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+            alt="Bat Flying Animation">
+        </a>
+      </div>
+      ===================== -->
+
+        </div>
+
+        <div class="col-lg-8">
+
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="es-Galaxy.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/1600x883-Galaxy-Thumbnail.png"
+                alt="">
+            </a>
+          </div>
+
+          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="toucan-template.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
+                alt="Library of Congress">
+            </a>
+          </div>
+          <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
+                src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+          </div>
+
+
+
+
+        </div>
+
+
+      </div>
+
+      <div class="row lightbox-gallery">
+
+
+
+
+        <div class="col-lg-4">
+
+
+
 
 
         </div>
@@ -189,12 +212,6 @@
 
 
 
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Racing-Extinction.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
-                alt="">
-            </a>
-          </div>
 
 
 
@@ -213,7 +230,17 @@
 </a>
 --- a work -->
       </div>
+      <div class="row lightbox-gallery">
+        <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
+              src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+              allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+          <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
+      </div>
     </div>
+
 
     <!--  ================== ABOUT SECTION ===================== -->
 
@@ -226,12 +253,9 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hola, soy Peter. un diseñador que empezó su carrera como un estudiante de arte
-            lleno de
-            curiosidad. Aquella curiosidad me llevo del diseño gráfico a la animación digital y de la animación al
-            UX/UI.
-            Hoy en día me doy cuenta que, sin importar el trabajo que tomo, siempre estoy diseñado experiencias y
-            contando historias de una u otra manera. Para aprender mas acerca de mi visita mi <a
+          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que ayuda, a compañías, a crear productos y
+            servicios que son fáciles de usar, y mientras estoy en ello también las asesoro con su look para que se vean
+            bien, realmente bien. Para aprender mas acerca de mi visita mi <a
               href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
             </li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
