--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
           <span></span>
         </div>
       </div>
-      <div class="float-right">
-        <a class="text-white px-4" href="es.html">Español</a>
-      </div>
     </header>
 
     <!-- Navigation -->
@@ -82,6 +79,10 @@
             <li class="scroll">
               <a href="#contact">Contact Information</a>
             </li>
+            <li class="scroll">
+              <a href="es.html">Website en Español</a>
+            </li>
+
           </ul>
         </div>
       </div>
