New Google Analytics Tag
<!-- Global site tag (gtag.js) - Google Analytics -->
<script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
<script>
  window.dataLayer = window.dataLayer || [];
  function gtag(){dataLayer.push(arguments);}
  gtag('js', new Date());

  gtag('config', 'G-FW93YMH578');
</script>

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -34,6 +34,15 @@
     <link rel="stylesheet" href="css/toucan-typography.css" />
 
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FW93YMH578');
+    </script>
 </head>
 
 <body>
