--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -27,6 +27,15 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FW93YMH578');
+  </script>
 </head>
 
 <body>
@@ -133,7 +142,8 @@
               <br>Acct. Coordinator: Christina Carr,
               <br>Creative Director: Janet Daniel,
               <br>Copy Editor: Shaun Gholston,
-              <br>Designer: Peter Verastegui</p>
+              <br>Designer: Peter Verastegui
+            </p>
           </div>
         </div>
       </div>
