--- a/Love-Letter.html
+++ b/Love-Letter.html
@@ -1,212 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-<title>Wender Portfolio Template</title>
-<meta charset="UTF-8">
-<meta name="description" content="Wender Portfolio Template">
-<meta name="keywords" content="personal, portfolio">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- 
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css"/>
 
-    <!--[if lt IE 9]>
+<head>
+  <title>Wender Portfolio Template</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Wender Portfolio Template">
+  <meta name="keywords" content="personal, portfolio">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]--> 
-    
-    <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.png">    
+    <![endif]-->
 
-     <!-- Font icons --> 
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css"/>
+  <!-- FAVICON  -->
+  <link rel="shortcut icon" href="img/favico.png">
 
-     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <!-- Font icons -->
+  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
-</head> 
-<body> 
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
-<!-- Preloader -->
-<div id="preloader">
-<svg width="60px"  height="60px" viewBox="0 0 100 100"><path fill="none" d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z" stroke="#F2F2F2" stroke-width="6" stroke-dasharray="205.271142578125 51.317785644531256"><animate attributeName="stroke-dashoffset" calcMode="linear" values="0;256.58892822265625" keyTimes="0;1" dur="1.5" begin="0s" repeatCount="indefinite"></animate></path></svg>
-</div> 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-<main>
- 
-<!-- Header
+    gtag('config', 'G-FW93YMH578');
+  </script>
+</head>
+
+<body>
+
+  <!-- Preloader -->
+  <div id="preloader">
+    <svg width="60px" height="60px" viewBox="0 0 100 100">
+      <path fill="none"
+        d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z"
+        stroke="#F2F2F2" stroke-width="6" stroke-dasharray="205.271142578125 51.317785644531256">
+        <animate attributeName="stroke-dashoffset" calcMode="linear" values="0;256.58892822265625" keyTimes="0;1"
+          dur="1.5" begin="0s" repeatCount="indefinite"></animate>
+      </path>
+    </svg>
+  </div>
+
+  <main>
+
+    <!-- Header
 ================================================== -->
-<header>
-  <a href="index.html" class="logo float-left"></a>
-  <div class="menu float-right">
-       <div class="nav-icon">
-            <span></span>
-            <span></span>
-            <span></span>
+    <header>
+      <a href="index.html" class="logo float-left"></a>
+      <div class="menu float-right">
+        <div class="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-  </div>
-</header>
-
-<!-- Navigation -->
-<nav id="full-menu" class="fullmenu">
-  <div class="menu-container"> 
-      <div class="menu-holder">
-          <ul class="navmenu">
-              <li class="scroll">
-                  <a href="index.html#portfolio">Portfolio</a>
-              </li>
-              <li class="scroll">
-                      <a href="index.html#about">About</a>
-              </li>
-              <li class="scroll">
-                  <a href="index.html#clients">Clients</a>
-              </li>
-              <li class="scroll">
-                  <a href="index.html#contact">Contact</a>
-              </li>
-          </ul>                 
       </div>
-  </div>
-</nav>
+    </header>
 
-<!-- Up to top -->
-<div class="uptotop">
-  <div class="holder">
-    <span>Up to top</span>
-    <div class="arrow"></div>
-  </div>
-</div>
+    <!-- Navigation -->
+    <nav id="full-menu" class="fullmenu">
+      <div class="menu-container">
+        <div class="menu-holder">
+          <ul class="navmenu">
+            <li class="scroll">
+              <a href="index.html#portfolio">Portfolio</a>
+            </li>
+            <li class="scroll">
+              <a href="index.html#about">About</a>
+            </li>
+            <li class="scroll">
+              <a href="index.html#clients">Clients</a>
+            </li>
+            <li class="scroll">
+              <a href="index.html#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<!-- Hero Section
+    <!-- Up to top -->
+    <div class="uptotop">
+      <div class="holder">
+        <span>Up to top</span>
+        <div class="arrow"></div>
+      </div>
+    </div>
+
+    <!-- Hero Section
 ================================================== -->
-<div class="hero"  data-midnight="dark">
-  <div class="hero-content">
-      <div class="inner">
+    <div class="hero" data-midnight="dark">
+      <div class="hero-content">
+        <div class="inner">
           <h1 class="title">RED SONJA</h1>
           <span class="category">Video</span>
+        </div>
       </div>
-  </div>
-   <!-- Down Icon -->
-    <div class="down-icon white" data-wow-delay="1.7s">
-        <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-            <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;"/>
-            <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#F2F2F2;stroke-width:20px;"/>
+      <!-- Down Icon -->
+      <div class="down-icon white" data-wow-delay="1.7s">
+        <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
+          <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
+          <path id="mouse"
+            d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z"
+            style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
         </svg>
-    </div>
-    <div class="video-wrapper"> 
-      <video loop="" muted="" autoplay="">
+      </div>
+      <div class="video-wrapper">
+        <video loop="" muted="" autoplay="">
           <source src="img/works/work-2/01.webm" type="video/webm">
           <source src="img/works/work-2/01.mp4" type="video/mp4">
-      </video>   
-    </div>  
-  <div class="hero-image mobile-image" style="background-image: url(img/work-2.jpg); visibility: hidden;"></div>
-</div>
+        </video>
+      </div>
+      <div class="hero-image mobile-image" style="background-image: url(img/work-2.jpg); visibility: hidden;"></div>
+    </div>
 
 
-<!-- Work Content
+    <!-- Work Content
 ================================================== -->
-<section  data-midnight="white" class="padding_90">
-  <div class="container project-detail text-center">
-    <h2 class="title top_60 bottom_30">Love Letter to Santa Cruz, Bolivia</h2>
-    <p>Having to leave the place you call home to start again in a foreign place is nothing short than devastating, uprroting one's entire existence is a shock that could break some, I am aware that with the past of time I have come to romanticize that place where I was bonr, how could I not? at its best the place I called home is a reminder I have an experience worth sharing, at its worst it is as if that fact condisition everything I do in the world and specially in my new country. </p>
-  <!-- Images -->
-  <div class="row lightbox-gallery masonry top_120">
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-1/01.jpg" class="lightbox">
-        <img src="img/works/work-2/02.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-1/03.jpg" class="lightbox">
-        <img src="img/works/work-1/03.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/04.jpg" class="lightbox">
-        <img src="img/works/work-2/04.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/05.jpg" class="lightbox">
-        <img src="img/works/work-2/05.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/06.jpg" class="lightbox">
-        <img src="img/works/work-2/06.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/07.jpg" class="lightbox">
-        <img src="img/works/work-2/07.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/08.jpg" class="lightbox">
-        <img src="img/works/work-2/08.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/09.jpg" class="lightbox">
-        <img src="img/works/work-2/09.jpg" alt="">
-      </a>
-    </div>
-    <!-- a image -->
-    <div class="col-lg-4 image">
-      <a href="img/works/work-2/10.jpg" class="lightbox">
-        <img src="img/works/work-2/10.jpg" alt="">
-      </a>
-    </div>
-  </div>
-
-  </div> <!-- container end -->
-
-<div class="col-lg-12 text-center top_90">
-    <a class="next-link" href="work-3.html">
-        <div class="nav-title">Next Work</div>
-        <div class="next-title">Signé Toqué</div>
-    </a>
-</div>
-</section>
-
-<footer data-midnight="dark">
-  <div class="container text-center">
-    <div class="row">  
-      <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
-          <div class="top_15 bottom_45">
-              <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+    <section data-midnight="white" class="padding_90">
+      <div class="container project-detail text-center">
+        <h2 class="title top_60 bottom_30">Love Letter to Santa Cruz, Bolivia</h2>
+        <p>Having to leave the place you call home to start again in a foreign place is nothing short than devastating,
+          uprroting one's entire existence is a shock that could break some, I am aware that with the past of time I
+          have come to romanticize that place where I was bonr, how could I not? at its best the place I called home is
+          a reminder I have an experience worth sharing, at its worst it is as if that fact condisition everything I do
+          in the world and specially in my new country. </p>
+        <!-- Images -->
+        <div class="row lightbox-gallery masonry top_120">
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-1/01.jpg" class="lightbox">
+              <img src="img/works/work-2/02.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-1/03.jpg" class="lightbox">
+              <img src="img/works/work-1/03.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/04.jpg" class="lightbox">
+              <img src="img/works/work-2/04.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/05.jpg" class="lightbox">
+              <img src="img/works/work-2/05.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/06.jpg" class="lightbox">
+              <img src="img/works/work-2/06.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/07.jpg" class="lightbox">
+              <img src="img/works/work-2/07.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/08.jpg" class="lightbox">
+              <img src="img/works/work-2/08.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/09.jpg" class="lightbox">
+              <img src="img/works/work-2/09.jpg" alt="">
+            </a>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-4 image">
+            <a href="img/works/work-2/10.jpg" class="lightbox">
+              <img src="img/works/work-2/10.jpg" alt="">
+            </a>
           </div>
         </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <p class="copyright">© Edwin Peter Verastegui Guasace</p>
+
+      </div> <!-- container end -->
+
+      <div class="col-lg-12 text-center top_90">
+        <a class="next-link" href="work-3.html">
+          <div class="nav-title">Next Work</div>
+          <div class="next-title">Signé Toqué</div>
+        </a>
       </div>
-    </div>
-  </div>
-</footer>
+    </section>
 
-</main>
+    <footer data-midnight="dark">
+      <div class="container text-center">
+        <div class="row">
+          <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
+            <div class="top_15 bottom_45">
+              <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i> </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i
+                  class="fab fa-behance" aria-hidden="true"></i> </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i
+                  class="fab fa-dribbble" aria-hidden="true"></i> </a>
+              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
+                  class="fab fa-instagram" aria-hidden="true"></i> </a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p class="copyright">© Edwin Peter Verastegui Guasace</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </main>
 
 
-<!-- Javascripts -->
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-    
+  <!-- Javascripts -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
 
 </body>
+
 </html>
