--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -27,6 +27,15 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FW93YMH578');
+    </script>
 </head>
 
 <body>
@@ -138,7 +147,8 @@
                         <p>Dir, Creative Strategy: Jeff Honea,
                             <br>Creative Director: Christos DeVaris,
                             <br>Copy Writer: Sarah DeLucia,
-                            <br>Designer: Peter Verastegui</p>
+                            <br>Designer: Peter Verastegui
+                        </p>
                     </div>
                 </div>
             </div>
