--- a/es-Creating-Change.html
+++ b/es-Creating-Change.html
@@ -29,6 +29,15 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FW93YMH578');
+  </script>
 </head>
 
 <body>
@@ -139,7 +148,8 @@
               <br>Coordinadora: Christina Carr,
               <br>Directora Creativa: Janet Daniel,
               <br>Redactor: Shaun Gholston,
-              <br>Diseñador: Peter Verastegui</p>
+              <br>Diseñador: Peter Verastegui
+            </p>
           </div>
         </div>
       </div>
