--- a/es-Library-of-Congress.html
+++ b/es-Library-of-Congress.html
@@ -29,6 +29,15 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-FW93YMH578');
+  </script>
 </head>
 
 <body>
@@ -137,7 +146,8 @@
             <h2 class="title bottom_30">Créditos</h2>
             <p>Universidad: Corcoran College of Art + Design,
               <br>Instructor: David Ramos,
-              <br>Estudiante: Peter Verastegui</p>
+              <br>Estudiante: Peter Verastegui
+            </p>
           </div>
         </div>
       </div>
