--- a/es-Storytelling-Bootcamp.html
+++ b/es-Storytelling-Bootcamp.html
@@ -29,6 +29,15 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FW93YMH578');
+    </script>
 </head>
 
 <body>
@@ -246,8 +255,8 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script type="text/javascript">
-    var currentYear = new Date().getFullYear();
-    document.getElementById("copyYear").innerHTML = currentYear;
+        var currentYear = new Date().getFullYear();
+        document.getElementById("copyYear").innerHTML = currentYear;
     </script>
 
 
