--- a/toucan/documentation/index.html
+++ b/toucan/documentation/index.html
@@ -23,6 +23,15 @@
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FW93YMH578"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-FW93YMH578');
+</script>
 </head>
 
 <body id="" class="bg-color">
