Renaming Titles for html pages

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -2,7 +2,7 @@
 <html lang="en" class=" js no-touch cssanimations csstransitions">
 
 <head>
-  <title>Peter Verastegui | Portofolio</title>
+  <title>Peter Verastegui | Galaxy</title>
   <meta charset="UTF-8">
   <meta name="description" content="Peter Verastegui's Portofolio">
   <meta name="keywords" content="personal, portfolio">
