--- a/es-Biodiversity-Festival.html
+++ b/es-Biodiversity-Festival.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfalio</title>
+  <title>Peter Verastegui | Biodiversity Festival</title>
   <meta charset="UTF-8">
   <meta name="description" content="Portafolio de Peter Verastegui">
   <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
