--- a/jerk-project.html
+++ b/jerk-project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Peter Verastegui | Portfolio</title>
+    <title>Peter Verastegui | Jerk Project</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Peter Verastegui's Portofolio" />
     <meta name="keywords" content="personal, portfolio" />
