About me update.

--- a/es.html
+++ b/es.html
@@ -264,11 +264,13 @@
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
           <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que ayuda, a compañías, a crear productos y
             servicios que son fáciles de usar, y mientras estoy en ello también las asesoro con su look para que se vean
-            bien, realmente bien. Para aprender mas acerca de mi visita mi <a
-              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a>
-            </li>
-            &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
-                class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
+            bien, realmente bien. Para aprender mas acerca de mi visita mi &nbsp;<a
+              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
+                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
+              href="https://open.spotify.com/playlist/17WDdefco1Zz4gyQf9fiQV" target="_blank"
+              rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;lista de
+              canciones</a>&nbsp;de este año en
+            Spotify.</p>
         </div>
 
       </div>
