--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
           <p class="padtop_60 grey-text">Hello, my name is Peter. I am an artist that helps companies make their
             products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
             check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
-                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or lisen to my
+                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or listen to my
             2021&nbsp;&nbsp;<a href="https://open.spotify.com/playlist/17WDdefco1Zz4gyQf9fiQV" target="_blank"
               rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;Spotify
-              playlist.</a></p>
+              playlist</a>.</p>
         </div>
 
       </div>
