--- a/jerk-project.html
+++ b/jerk-project.html
@@ -159,10 +159,25 @@
         </section>
 
 
-        <section data-midnight="white" class="white-bg">
+        <section data-midnight="white" class="dark-bg padbot_60">
             <div class="project-detail container">
-                <h3 class="text no-gutter text-center subtitle">Valueing Behavior</h3>
-            </div>
+                <div class="row lightbox-gallery">
+                    <div class="image col-lg-8  offset-lg-2 align-self-center">
+                        <img src="img/works/Jerk-project/Megaphone-Mocker-Problem-statement-hero.png"
+                            alt="Megaphone Mocker" />
+                    </div>
+                </div>
+                <div class="row lightbox-gallery padtop_60">
+                    <div class="col-lg-8  offset-lg-2">
+                        <h3 class="text white-text no-gutter subtitle">The Problem</h3>
+                        <p class="white-text">
+                            I learned about this project from the brilliant mind of Karen Holtzblatt. I met Karen after
+                            seeing her speak at an event in FINRA. Later that week I learned that her organization
+                            WITOPS was looking for volunteers so I signed up and lucky me I ran into this amazing
+                            project she and her org had been working on.
+                        </p>
+                    </div>
+                </div>
         </section>
 
         <div data-midnight="white" class="container padding_60 jerk-project-bg-purple">
@@ -182,7 +197,7 @@
                 </div>
 
                 <div class="image col-lg-4 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Grateful-Maker.png" alt="New elements" />
+                    <img src="img/works/Jerk-project/Characters/Value/Grateful-Maker.png" alt="Grateful Maker" />
                     <div class="overlay-img-for-character padding_10_item round-corners">
                         <div class="text-for-character-overlay">Grateful Maker</div>
                     </div>
@@ -277,48 +292,45 @@
                 </div>
             </div>
             <!-- project-detail Two Columns | End -->
-        </div>
+            <section class="white-bg">
+                <div class="col-lg-12 text-center">
+                    <a class="next-link" href="Creating-Change.html">
+                        <div class="nav-title">Next Work</div>
+                        <div class="next-title">Creating-Change</div>
+                    </a>
+                </div>
+            </section>
 
-
-        <section class="white-bg">
-            <div class="col-lg-12 text-center">
-                <a class="next-link" href="Creating-Change.html">
-                    <div class="nav-title">Next Work</div>
-                    <div class="next-title">Creating-Change</div>
-                </a>
-            </div>
-        </section>
-
-        <!-- footer -->
-        <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
-            <div class="container project-detail padtop_15">
-                <div class="row lightbox-gallery">
-                    <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contac Information</h2>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
-                        <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
-                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
-                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
-                                aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                                aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
-                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
-                                class="fab fa-instagram" aria-hidden="true"></i> </a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
-                        <p class="white-text">
-                            &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+            <!-- footer -->
+            <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+                <div class="container project-detail padtop_15">
+                    <div class="row lightbox-gallery">
+                        <div class="col-lg-4">
+                            <h2 class="white-text subtitle bottom_30">Contac Information</h2>
+                        </div>
+                        <div class="col-lg-2 bottom_30">
+                            <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+                        </div>
+                        <div class="col-lg-2 bottom_30">
+                            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+                        </div>
+                        <div class="col-lg-2 bottom_30">
+                            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                    aria-hidden="true"></i> </a>
+                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i
+                                    class="fab fa-behance" aria-hidden="true"></i> </a>
+                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                    class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
+                                    class="fab fa-instagram" aria-hidden="true"></i> </a>
+                        </div>
+                        <div class="col-lg-2 bottom_30">
+                            <p class="white-text">
+                                &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            </div>
+        </div>
         </footer>
     </main>
     <!-- Javascripts -->
