--- a/toucan-template.html
+++ b/toucan-template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Peter Verastegui | Portofolio</title>
+    <title>Peter Verastegui | Toucan</title>
     <meta charset="UTF-8">
     <meta name="description" content="Peter Verastegui's Portofolio">
     <meta name="keywords" content="personal, portfolio">
