--- a/jerk-project.html
+++ b/jerk-project.html
@@ -180,157 +180,180 @@
                 </div>
         </section>
 
-        <div data-midnight="white" class="container padding_60 jerk-project-bg-purple">
-            <!-- project-detail Two Columns | Start -->
-            <div class="lightbox-gallery row no-gutter popup-gallery justify-content-center">
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Reward-Master.png" alt="New elements" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Reward Master</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Coach.png" alt="New elements" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Coach</div>
-                    </div>
-                </div>
 
-                <div class="image col-lg-4 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Grateful-Maker.png" alt="Grateful Maker" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Grateful Maker</div>
-                    </div>
-                </div>
-
-            </div>
-            <!-- project-detail Two Columns | End -->
-
-            <!-- project-detail Two Columns | Start -->
-            <div class="row lightbox-gallery no-gutter top_15 justify-content-center">
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Consumate-Prodessional.png" alt="New elements" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Consumate Proffessional</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/Thank-You-Maven.png" alt="New elements" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Thank-You Maven</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Value/CHAMPION.png" alt="New elements" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Champion</div>
-                    </div>
-                </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-            </div>
-            <!-- project-detail Two Columns | End -->
-        </div>
-
-
-
-        <div data-midnight="white" class="container padding_60 dark-bg">
-            <!-- project-detail Two Columns | Start -->
-            <div class="lightbox-gallery row no-gutter popup-gallery justify-content-center">
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker.png" alt="Megaphone Mocker" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Megaphone Mocker</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Values-Violator.png" alt="Velues Violator" />
-                    <div class=" overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Values Violator</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Time-Waster.png" alt="Time Waster">
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Time Waster</div>
-                    </div>
-                </div>
-            </div>
-            <!-- project-detail Two Columns | End -->
-
-            <!-- project-detail Two Columns | Start -->
-            <div class="row lightbox-gallery no-gutter top_15 justify-content-center">
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Role-Stomper.png" alt="Role Stomper" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Role Stomper</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Demeaner.png" alt="Demeaner" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Demeaner</div>
-                    </div>
-                </div>
-                <div class="image col-lg-4 bottom_15 container-img-for-character align-self-center">
-                    <img src="img/works/Jerk-project/Characters/Jerks/Decision-Dominator.png"
-                        alt="Decision Dominator" />
-                    <div class="overlay-img-for-character padding_10_item round-corners">
-                        <div class="text-for-character-overlay">Decision Dominator</div>
-                    </div>
-                </div>
-            </div>
-            <!-- project-detail Two Columns | End -->
-            <section class="white-bg">
-                <div class="col-lg-12 text-center">
-                    <a class="next-link" href="Creating-Change.html">
-                        <div class="nav-title">Next Work</div>
-                        <div class="next-title">Creating-Change</div>
+        <div data-midnight="white" class="container padding_90 jerk-project-bg-purple">
+            <!-- Modal -->
+            <div class="lightbox-gallery masonry justify-content-center">
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/Reward-Master-text.png" alt="Reward Master"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/Reward-Master.png" alt="Reward Master">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Reward Master</div>
+                        </div>
                     </a>
                 </div>
-            </section>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/Coach-text.png" alt="Coach" class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/Coach.png" alt="Coach">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Coach</div>
+                        </div>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/Grateful-Maker-text.png" alt="Grateful Maker"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/Grateful-Maker.png" alt="Grateful Maker">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Grateful Maker</div>
+                        </div>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/Consumate-Prodessional-text.png"
+                        alt="Consumate Prodessional" class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/Consumate-Prodessional.png"
+                            alt="Consumate Prodessional">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Consumate Prodessional</div>
+                        </div>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/Thank-You-Maven-Text.png" alt="Thank-You Maven"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/Thank-You-Maven.png" alt="Thank-You Maven">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Thank-You Maven</div>
+                        </div>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Value/CHAMPION-text.png" alt="Champion" class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Value/CHAMPION.png" alt="Champion">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Champion</div>
+                        </div>
+                    </a>
+                </div>
 
-            <!-- footer -->
-            <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
-                <div class="container project-detail padtop_15">
-                    <div class="row lightbox-gallery">
-                        <div class="col-lg-4">
-                            <h2 class="white-text subtitle bottom_30">Contac Information</h2>
+            </div>
+        </div>
+
+        <div data-midnight="white" class="container padding_90 dark-bg">
+            <!-- Modal -->
+            <div class="lightbox-gallery masonry justify-content-center">
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker-Text.png" alt="Megaphone Mocker"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Megaphone-Mocker.png" alt="Megaphone Mocker">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Megaphone Mocker</div>
                         </div>
-                        <div class="col-lg-2 bottom_30">
-                            <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Values-Violator-text.png" alt="Values Violator"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Values-Violator.png" alt="Values Violator">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Values Violator</div>
                         </div>
-                        <div class="col-lg-2 bottom_30">
-                            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Time-Waster-text.png" alt="Time Waster"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Time-Waster.png" alt="Time Waster">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Time Waster</div>
                         </div>
-                        <div class="col-lg-2 bottom_30">
-                            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
-                                    aria-hidden="true"></i> </a>
-                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i
-                                    class="fab fa-behance" aria-hidden="true"></i> </a>
-                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
-                                    class="fab fa-pinterest" aria-hidden="true"></i> </a>
-                            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
-                                    class="fab fa-instagram" aria-hidden="true"></i> </a>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Role-Stomper-text.png" alt="Role Stomper"
+                        class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Role-Stomper.png" alt="Role Stomper">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Role Stomper</div>
                         </div>
-                        <div class="col-lg-2 bottom_30">
-                            <p class="white-text">
-                                &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Demeaner-text.png" alt="Demeaner" class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Demeaner.png" alt="Demeaner">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Demeaner</div>
                         </div>
+                    </a>
+                </div>
+                <!-- a image -->
+                <div class="col-lg-4 col-sm-12 image container-img-for-character align-self-center">
+                    <a href="img/works/Jerk-project/Characters/Jerks/Decision-Dominator-text.png"
+                        alt="Decision Dominator" class="lightbox">
+                        <img src="img/works/Jerk-project/Characters/Jerks/Decision-Dominator.png"
+                            alt="Decision Dominator">
+                        <div class="overlay-img-for-character padding_10_item round-corners">
+                            <div class="text-for-character-overlay">Decision Dominator</div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- project-detail Two Columns | End -->
+        <section class="white-bg">
+            <div class="col-lg-12 text-center">
+                <a class="next-link" href="Creating-Change.html">
+                    <div class="nav-title">Next Work</div>
+                    <div class="next-title">Creating-Change</div>
+                </a>
+            </div>
+        </section>
+
+        <!-- footer -->
+        <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+            <div class="container project-detail padtop_15">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4">
+                        <h2 class="white-text subtitle bottom_30">Contac Information</h2>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
+                                class="fab fa-instagram" aria-hidden="true"></i> </a>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <p class="white-text">
+                            &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
                 </div>
-        </div>
+            </div>
+            </div>
         </footer>
     </main>
     <!-- Javascripts -->
