Clone from GitHub

--- a/toucan-template.html
+++ b/toucan-template.html
@@ -167,7 +167,7 @@
                         <p class="white-text toucan-p bottom_10">In this template you can choose a "highlight" color, or
                             add your own, and you can switch from dark to light theme with one click, try it:
                         </p>
-                        <a href="https://peterveras.com/toucan/index.html" target="_blank">
+                        <a href="https://peterveras.github.io/Toucan-Bootstrap-Theme/index.html" target="_blank">
                             <button class="site-btn top_30" data-tilt> LIVE PREVIEW
                                 <i class="icon ion-md-arrow-down"></i>
                             </button>
@@ -343,14 +343,14 @@
                     <p class="toucan-p bottom_30 text-center text">send some feedback!
                     </p>
                     <div class="text-center">
-                        <a href="https://peterveras.com/toucan/index.html" target="_blank">
+                        <a href="https://peterveras.github.io/Toucan-Bootstrap-Theme/index.html" target="_blank">
                             <button class="site-btn  bottom_30" data-tilt> LIVE PREVIEW
                                 <i class="icon ion-md-arrow-down"></i>
                             </button>
                         </a>
 
-                        <a href="/toucan/download/toucan.zip" target="_self" download>
-                            <button class="site-btn  bottom_30" data-tilt> DOWNLOAD HERE
+                        <a href="https://github.com/peterveras/Toucan-Bootstrap-Theme" target="_self" download>
+                            <button class="site-btn  bottom_30" data-tilt> Clone from GitHub
                                 <i class="icon ion-md-arrow-down"></i>
                             </button>
                         </a>
